tests/rosetta/out/Rust/apply-a-digital-filter-direct-form-ii-transposed-.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:16:55
   |
16 |                 tmp = tmp + b[j as usize] * input[i - j as usize];
   |                                                       ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:16:53
   |
16 |                 tmp = tmp + b[j as usize] * input[i - j as usize];
   |                                                     ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[f64]` cannot be indexed by `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:16:51
   |
16 |                 tmp = tmp + b[j as usize] * input[i - j as usize];
   |                                                   ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[f64]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<f64>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:35
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:33
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[f64]` cannot be indexed by `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:31
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                               ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[f64]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<f64>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:61
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                                                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:59
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                                                           ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[f64]` cannot be indexed by `i32`
  --> /tmp/TestMochiToRustapply-a-digital-filter-direct-form-ii-transposed-3020234167/001/prog.rs:21:53
   |
21 |                 tmp = tmp - a[j + 1 as usize] * out[i - j - 1 as usize];
   |                                                     ^^^^^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[f64]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<f64>` to implement `Index<i32>`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
